--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,44 @@
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
+# Node.js
+node_modules/
+npm-debug.log
+yarn-error.log
 
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
+# Build output
+dist/
+build/
 
-# Logs and databases #
-######################
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Logs
+logs/
 *.log
-*.sql
-*.sqlite
+*.log.*
 
-# OS generated files #
-######################
+# Dependency lock files (optional, include if not using)
+# package-lock.json
+# yarn.lock
+
+# Editor and IDE files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# OS-specific files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*~
+
+# Coverage reports
+coverage/
+
+# Service worker build artifacts
+sw.js
